--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ var x = setInterval(function() {
     document.getElementById("TIMER").innerHTML = minutes + "m " + seconds + "s ";
     if (distance < 0) {
         clearInterval(x);
-        document.getElementById("TIMER").innerHTML = "The 2018 Programming Puzzles & Code Golf election has begun!";
+        document.getElementById("TIMER").innerHTML = "The 2018 Programming Puzzles & Code Golf election has ended!";
     }
 }, 1000);
 </script>
