--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ a:hover, a:active {
 
 <p id="TIMER" style="text-align: center; font-size: 60px; align: center; margin-top: 45vh; color: #eeeeee;"></p>
 
-<p style="position: fixed; bottom: 5px; left: 20px; color: #eeeeee;">This is a timer for the <a href="https://codegolf.stackexchange.com/election/2">2018 PPCG Moderator election</a></p>
+<p style="position: fixed; bottom: 5px; left: 20px; color: #eeeeee;">This is a countdown timer for the <a href="https://codegolf.stackexchange.com/election/2">2018 PPCG Moderator election</a>. <a href="https://github.com/Mr-Xcoder/ModElectionTimer">Github Repository</a>.</p>
 
 <script>
 var countDownDate = new Date("Feb 20, 2018 22:00:00").getTime();
